# strategy_factory

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: 01-knowledge-base.md  02-system-design.md  03-research-findings.md  04-paper-integration-plan-2026-06.md  05-external-papers-2026-06.md
examples/: bitbank_e2e.py  build_report_index.py  causal_filter_demo.py  cross_sectional.py  dollar_bar_pipeline.py  download_jquants.py  download_nikkei225.py  edge_search.py  end_to_end_demo.py  fetch_indices_flows.py  fetch_margin_short.py  fetch_options.py  flows_analysis.py  frac_diff_demo.py  jp_causal_shorttolong.py  jp_combo_value_margin.py  jp_equities_factor_study.py  jp_margin_short_study.py  jp_pit_universe_study.py  jp_value_oos.py  jquants_calibrate.py  jquants_indices_probe.py  jquants_markets_probe.py  jquants_probe2.py  jquants_smoke.py  jquants_standard_check.py  meta_labeling_demo.py  multifactor.py  phase2_dashboard_data.py  phase2_generate_orders.py  phase2_push_supabase.py  phase2_reconcile.py  portfolio_demo.py  registry_status.py  research_breadth_factors.py  research_calendar_pairs.py  research_disclosure_timing.py  research_earnings_timing.py  research_factor_momentum_diag.py  research_gap_demo.py  (+31 more)
invest_system/: __init__.py  config.py
tests/: test_bars.py  test_causal.py  test_config.py  test_cpcv.py  test_cpcv_backtest.py  test_cv_score.py  test_dsr.py  test_equities.py  test_events.py  test_external.py  test_external_fetch.py  test_feature_store.py  test_flows.py  test_frac_diff.py  test_frictions.py  test_index_events.py  (+26 more)
(+66 files in other folders)
